[tool.poetry]
name = "threatmapper"
version = "0.1.0"
description = ""
authors = ["Sagi Sarussi <sagis@sagis.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
